<resources>
    <string name="app_name">UHF</string>
    <string name="check_box_close">Exit  with close quick scan</string>
    <string name="check_box_close_service">Exit  with close quick inventory service</string>
    <string name="Search_Btn_T">SEARCH</string>
    <string name="Read_Btn_T">READ</string>
    <string name="Write_Btn_T">WRITE</string>
    <string name="Direction_Btn_T">Direction</string>
    <string name="Name_item">Current Card(by EPC):</string>
    <string name="read_addr">Addr(hex)</string>
    <string name="read_count">Count</string>
    <string name="write_addr">Addr(hex)</string>
    <string name="write_count">Count</string>
    <string name="write_passwd">Password(hex)</string>
    <string name="Ok_btn">OK</string>
    <string name="Cancle_btn">Cancel</string>
    <string name="Item_Read">Read Card</string>
    <string name="Item_Write">Write Card</string>
    <string name="Item_Search">Search Card</string>
    <string name="Choose_Item">Please choose a card</string>
    <string name="Choose_Btn_T">Choose</string>
    <string name="Item_Choose">Choose a Card(by EPC)</string>
    <string name="Set_Btn">Set Param</string>
    <string name="Set_Btn_set">Set</string>
    <string name="Item_OutLevel">Output level</string>
    <string name="Item_Sensitivity">Sensitivity</string>
    <string name="Item_FreqStart">Start freq(Khz)</string>
    <string name="Item_FreqStop">End freq(Khz)</string>
    <string name="Item_FreqIncrement">Increment(Khz)</string>
    <string name="Item_Rssi">RSSI Threshold(dbm)</string>
    <string name="Item_Set_Title">SETTING</string>
    <string name="Set_Return_Btn">Go Back</string>
    <string name="Status_SetFreqOK">Set Freq Ok</string>
    <string name="Status_SetFreqFailed">Set Freq Failed</string>
    <string name="Status_SetOutputLevelOk">Set Output Level Ok</string>
    <string name="Status_SetOutputLevelFailed">Set Output Level Failed</string>
    <string name="Status_SetSensOK">Set Sensitivity Ok</string>
    <string name="Status_SetSensFailed">Set Sensitivity Failed</string>
    <string name="Status_InvalidNumber">Invalid Number or Character</string>
    <string name="Status_OutOfRange">Value is Out of Range</string>
    <string name="Status_Underflow">Value is too small</string>
    <string name="Status_comerror">Communication Error</string>
    <string name="TextView_Null"> </string>
    <string name="SetEPC_Btn">Set\nEPC</string>
    <string name="SetPasswd_Btn">Set Password</string>
    <string name="Lock_Btn">Lock/Unlock</string>
    <string name="Kill_Btn">Kill Tag</string>
    <string name="Item_Tag_EPC">Tag EPC</string>
    <string name="Item_Access_Pswd">Access Password</string>
    <string name="Item_Pswd_Type">Password Type</string>
    <string name="Item_New_Password">New Password</string>
    <string name="Item_EPC_Length">EPC Length(words)</string>
    <string name="Item_New_EPC">New EPC</string>
    <string name="Item_Lock_Area">Memory Space</string>
    <string name="Item_Lock_Action">Action</string>
    <string name="Start_Search_Btn">Start</string>
    <string name="Stop_Search_Btn">Pause</string>
    <string name="Status_Passwd_Length_Error">Password Length is Wrong</string>
    <string name="Status_Content_Length_Error">Content Length is Wrong</string>
    <string name="Status_Write_Error">Write Card Error</string>
    <string name="Status_Lock_Card_Error">Lock Card Error</string>
    <string name="Status_Wrong_Password_Type">Wrong Password Type</string>
    <string name="Status_Select_Card_Ok">Select Card Ok</string>
    <string name="Status_Select_Card_Faild">Select Card Faild</string>
    <string name="Status_Read_Card_Ok">Read OK</string>
    <string name="Status_Read_Card_Faild">Read Error</string>
    <string name="Status_Write_Card_Ok">Write Ok</string>
    <string name="Status_Write_Card_Faild">Write Faild</string>
    <string name="Status_No_Card_Select">No Card Selected</string>
    <string name="Status_Set_EPC_Error">Set EPC Error</string>
    <string name="Status_Read_Pc_Error">Read PC Error</string>
    <string name="Status_Freq_List_Full">Too Many Freq is add to list, Only some of success added.</string>
    <string name="SearchEAS_Btn">Search EAS</string>
    <string name="Item_EAS">Search EAS</string>
    <string name="if_status">Please select a protocol to demo</string>
    <string name="if_btn_6B">ISO18000-6B</string>
    <string name="if_btn_6C">ISO18000-6C</string>
    <string name="ISO6B_DEMO">Start Demo</string>
    <string name="DEV_OPEN_ERR">Device open failed！Software will quit！</string>
    <string name="DIA_ALERT">Warning！</string>
    <string name="DIA_CHECK">Confirm</string>
    <string name="VALUE_ZERO">00000000</string>
    <string name="btn_set">SET</string>
    <string name="view_wt">work time</string>
    <string name="view_rt">rest time</string>
    <string name="btn_bk">back</string>
    <string name="cb_beep">beep new</string>
    <string name="text_null"></string>
    <string name="antenna_p">antenna power</string>
    <string name="spt">speed\ntest</string>
    <string name="sptss">start</string>
    <string name="inv_set">Inv\nSet</string>
    <string name="spinner_area_text">Read\Write Area</string>
    <string name="write_content">Content(hex)</string>
    <string name="pindian">FrequencyPoint:</string>
    <string name="btn_export">Export</string>
    <string name="set_success">Setting Success</string>
    <string name="dialog_dir_epc">Fill in the EPC you are looking for</string>
    <string name="dialog_dir_seek">Find Now</string>
    <string name="toast_readtime">The recommended setting is less than 3 seconds</string>
    <string name="uhf_config">UHF</string>
    <string name="uhf_config_summary">UHF Settings</string>
    <string name="qb_config">Button Settings</string>
    <string name="qb_config_summary">Custom shortcuts</string>
    <string name="set_freq_item1">Freq band mode</string>
    <string name="set_etpower">0 RF off 1 RF on</string>
    <string name="set_failed">failed</string>
    <string name="set_freq">band setting</string>
    <string name="set_freq_hint">set freq</string>
    <string name="set_s2">session</string>
    <string name="set_s2_hint">select</string>
    <string name="set_read_time">working time</string>
    <string name="set_sleep">Time to rest</string>
    <string name="antenna_p_hint">antenna power</string>
    <string name="set_inv">inventory</string>
    <string name="set_freq_point">set freq point</string>
    <string name="set_freq_point_hint">input freq point</string>
    <string name="set_addr">address</string>
    <string name="set_addr_hint">input address</string>
    <string name="set_count">block</string>
    <string name="set_count_hint">input block count</string>
    <string name="btn_ok">Confirm</string>
    <string name="set_server_prefix">prefix</string>
    <string name="set_server_suffix">suffix</string>
    <string name="set_server_loop">loop</string>
    <string name="set_loop">loop</string>
    <string name="set_server_loop_time">set the cycle timeout</string>
    <string name="set_loop_s">s</string>
    <string name="set_long_down">long press the sweep</string>
    <string name="set_filter">Whether the filter</string>
    <string name="set_focus_show">Whether focus display epc</string>
    <string name="set_focus_show_tid">Focus switch display tid</string>
    <string name="search_dialog_item">Please find the card</string>
    <string name="search_dialog_title">Select the card to look for</string>
    <string name="search_toast">Please choose the card</string>
    <string name="num">times/s</string>
    <string name="spend_time">time</string>
    <string name="main_info1">select card number find card by prompt tone</string>
    <string name="main_info2">Welcome to UHF App</string>
    <string name="main_info3">search all then select card</string>
    <string name="main_rl_info1">/searched</string>
    <string name="main_rl_info2">time 0.000s</string>
    <string name="main_rl_info3">0 times/s</string>
    <string name="card_list">card list</string>
    <string name="card_list_info">select one for operation</string>
    <string name="voice">sound </string>
    <string name="main_info4">No card please search</string>
    <string name="search_title">search</string>
    <string name="btn_stop">stop</string>
    <string name="search_info1">Turn up volume for quick find</string>
    <string name="search_info2">target card</string>
    <string name="current_card">UHF card(EPC)</string>
    <string name="read_card">read</string>
    <string name="read_card_info">information</string>
    <string name="write_card">write</string>
    <string name="write_card_info">content</string>
    <string name="card_attr_set">card attribution</string>
    <string name="card_attr_info"> all attribution</string>
    <string name="toast1">can not empty</string>
    <string name="toast2">incorrect</string>
    <string name="toast_loop_sleep">The interval between cycles is too large</string>
    <string name="toast3">Address or block size too large, please re - enter </string>
    <string name="toast4">The epc length is too large</string>
    <string name="toast5">Please enter your 8-digit password</string>
    <string name="toast6">The content length does not match the number of blocks</string>
    <string name="read_status">reading....</string>
    <string name="read_password">password</string>
    <string name="read_password_hint">input password</string>
    <string name="write_status">wrirting....</string>
    <string name="card_content">content</string>
    <string name="card_content_hint">input content</string>
    <string name="set_password">Password</string>
    <string name="init_password">Access Password</string>
    <string name="init_password_hint">input access password</string>
    <string name="kill_password">KillPwd</string>
    <string name="access_password">AccPwd</string>
    <string name="new_password">New Password</string>
    <string name="new_password_hint">Enter an octet hexadecimal number</string>
    <string name="set_epc">EPC</string>
    <string name="set_epc_length">EPC Length</string>
    <string name="set_epc_length_hint">Enter an EPC length of no more than 31 blocks</string>
    <string name="input_new_epc_hint">One block is equal to four hexadecimal digits</string>
    <string name="set_lock">Lock</string>
    <string name="save_space">Lock area</string>
    <string name="lock_epc">EPC</string>
    <string name="lock_tid">TID</string>
    <string name="lock_user">USER</string>
    <string name="lock_type">Lock type</string>
    <string name="unlock_pwd_type">Unlock</string>
    <string name="lock_pwd_type">Lock</string>
    <string name="permaunlock_pwd_type">Permaunlock</string>
    <string name="permalock_pwd_type">Permalock</string>
    <string name="reset">Reset</string>
    <string name="power_range">antenna power value range is 5 ~ 30</string>
    <string name="set_power_fail">set antenna power failed</string>
    <string name="set_power_ok">set antenna power OK</string>
    <string name="dialog_uhf_off">UHF has been switched off. Please re-enter the application. </string>
    <string name="dialog_module_none">Module does not exist</string>
    <string name="write_success">Write Success</string>
    <string name="write_fail">Write Failed</string>
    <string name="read_fail">Read Failed</string>
    <string name="welcome">Welcome to uhf application</string>
    <string name="count_not_zero">blocks cannot be 0</string>
    <string name="algorithm_set">Algorithm Settings</string>
    <string name="dialog_exit">Press OK to turn off uhf</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_title_warning">warning</string>
    <string name="tv_xh_mode">Life pattern</string>
    <string name="tv_default_mode">Remote mode (default)</string>
    <string name="tv_s0_mode">s0 Fast mode</string>
    <string name="tv_s1_mode">s1 Fast mode</string>
</resources>