<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_search_card"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="14dp">

        <ImageView
            android:id="@+id/search_title_iv"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/exit_ico" />

        <TextView
            android:id="@+id/search_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/search_title"
            android:textColor="@color/text_white"
            android:textSize="22sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_stop"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="135dp"
            android:background="@drawable/btn_blue_border_shape"
            android:text="@string/btn_stop"
            android:textColor="@color/text_white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="87dp"
            android:text="@string/search_info1"
            android:textColor="@color/text_white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:text="@string/search_info2"
            android:textColor="@color/text_white"
            android:textSize="14sp" />


    </RelativeLayout>

</LinearLayout>