<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tran_gray_bg"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="150dp"
        android:background="@drawable/bg_white_8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_warning_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_title_warning"
            android:textColor="@color/commom_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/item_msg"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/dialog_exit"
            android:textColor="@color/text_set_dark"
            android:textSize="16sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#e7edea" />

        <Button
            android:id="@+id/item_ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/white_to_gray_bottom"
            android:text="@string/dialog_ok"
            android:textColor="@color/read_card_info"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>